# compile_mermaid

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/compile_mermaid/: __init__.py  cli.py  compiler.py
tests/: test_cli.py  test_compiler.py
