[project]
name = "compile-mermaid"
version = "0.1.0"
description = "Compile Mermaid diagrams into PDF files."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Artem" }
]
keywords = ["mermaid", "diagrams", "pdf", "latex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "black==26.3.1",
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
]

[project.scripts]
compile-mermaid = "compile_mermaid.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-p",
  "no:seleniumbase",
]
